Source/WebKit/UIProcess/ios/WebProcessProxyIOS.mm
@@ -34,6 +34,7 @@
 #import "WKStylusDeviceObserver.h"
 #import "WebProcessMessages.h"
 #import "WebProcessPool.h"
+#import <pal/system/cocoa/SleepDisablerCocoa.h>
 
 namespace WebKit {
 
@@ -45,6 +46,27 @@ void WebProcessProxy::platformInitialize()
 #if HAVE(STYLUS_DEVICE_OBSERVATION)
     [[WKStylusDeviceObserver sharedInstance] start];
 #endif
+
+    static bool didSetScreenWakeLockHandler = false;
+    if (!didSetScreenWakeLockHandler) {
+        didSetScreenWakeLockHandler = true;
+        PAL::SleepDisablerCocoa::setScreenWakeLockHandler([](bool shouldKeepScreenAwake) {
+            RefPtr<WebPageProxy> visiblePage;
+            for (auto& page : globalPageMap().values()) {
+                if (!visiblePage)
+                    visiblePage = page.get();
+                else if (page->isViewVisible()) {
+                    visiblePage = page.get();
+                    break;
+                }
+            }
+            if (!visiblePage) {
+                ASSERT_NOT_REACHED();
+                return false;
+            }
+            return visiblePage->uiClient().setShouldKeepScreenAwake(shouldKeepScreenAwake);
+        });
+    }
 
     m_throttler.setAllowsActivities(!m_processPool->processesShouldSuspend());
 }
